--- a/public/main.scss
+++ b/public/main.scss
@@ -312,12 +312,9 @@ select:-webkit-autofill {
 }
 /* END NAVBAR */
 
-/* HOME */
 #landing-section {
 	background-repeat: no-repeat;
 	background-color: color(dark-shade);
-	/*background-image: url(/svg/background_landing.svg);
-	background-size: cover;*/
 	z-index: 2;
 }
 
@@ -334,9 +331,6 @@ select:-webkit-autofill {
 	position: relative;
 
 	h1 {
-		/*background: linear-gradient(to top, color(main), color(main-light));
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;*/
 		margin-bottom: 15px;
 	}
 
@@ -357,9 +351,6 @@ select:-webkit-autofill {
 		b {
 			font-size: 28px;
 			color: color(main-light);
-			/*background: linear-gradient(to top, color(main), color(main-light));
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;*/
 		}
 
 		i {
@@ -372,31 +363,8 @@ select:-webkit-autofill {
 	.portfolio-link {
 		margin-left: 25%;
 		margin-top: 1em;
-
-		@keyframes portfolioLinkAnim {
-			0% {
-				transform: translateX(-800px);
-				opacity: 0;
-			}
-			32% {
-				transform: rotate(-15deg) translateX(0);
-				opacity: 0.33;
-			}
-			66% {
-				transform: rotate(15deg);
-				opacity: 0.66;
-			}
-			100% {
-				transform: rotate(0);
-				opacity: 1;
-			}
-		}
+		opacity: 0;
 	}
-}
-
-.portfolioLinkAnim {
-	opacity: 0;
-	animation: portfolioLinkAnim 0.7s 1 1.4s ease forwards;
 }
 
 .scroll-indicator {
@@ -404,25 +372,6 @@ select:-webkit-autofill {
 	position: absolute;
 	left: 31.5%;
 	top: 61%;
-
-	@keyframes indicatorAnim {
-		0% {
-			transform: translateY(-50px);
-			opacity: 0;
-		}
-		50% {
-			transform: translateY(50px);
-			opacity: 0.5;
-		}
-		100% {
-			opacity: 1;
-		}
-	}
-}
-
-.indicatorAnim {
-	opacity: 0;
-	animation: indicatorAnim 1s 1 1.8s ease forwards;
 }
 
 .scroll-indicator::before {
@@ -440,12 +389,6 @@ select:-webkit-autofill {
 	position: absolute;
 	text-align: center;
 	width: 6rem;
-}
-
-@keyframes bounce {
-	50% {
-		transform: translateY(-25%);
-	}
 }
 
 .freelancer-svg {
@@ -466,22 +409,6 @@ select:-webkit-autofill {
 	font-style: italic;
 	display: inline-block;
 	opacity: 1;
-}
-
-.heroAnim {
-	opacity: 0;
-	animation: heroAnim 1s 1 0.6s ease forwards;
-}
-
-@keyframes heroAnim {
-	0% {
-		transform: translateX(-150%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(0);
-		opacity: 1;
-	}
 }
 
 .main-section.even .hero-title {
@@ -570,43 +497,7 @@ select:-webkit-autofill {
 	}
 }
 
-.firstHeroAnim {
-	opacity: 0;
-	animation: firstHeroAnim 0.6s 1 0s ease;
-}
-
-.lastHeroAnim {
-	opacity: 0;
-	animation: lastHeroAnim 0.8s 1 1.2s ease forwards;
-}
-
 #landing-section {
-	h3 {
-		@keyframes firstHeroAnim {
-			0% {
-				transform: translateX(-55%);
-				opacity: 0;
-			}
-			100% {
-				transform: translateX(0);
-				opacity: 0.9;
-			}
-		}
-	}
-
-	h2 {
-		@keyframes lastHeroAnim {
-			0% {
-				transform: translateX(-110%);
-				opacity: 0;
-			}
-			100% {
-				transform: translateX(0);
-				opacity: 0.95;
-			}
-		}
-	}
-
 	background-color: color(light-shade);
 
 	.bg-clipper {
@@ -758,64 +649,119 @@ select:-webkit-autofill {
 		}
 	}
 }
-/* END HOME */
 
-/*
-section.intro {
-  background: rgb(4, 50, 61);
-  padding-top: 10em;
-  height: calc(100vh - 10em);
-}
-section.intro p {
-  font-size: 2em;
-  text-align: center;
-  margin-top: 3em;
-}
+/* KEYFRAMES & ANIMATION CLASSES */
 
-section.anim {
-  background: #1989a6;
-  padding: 12em;
-  height: calc(100vh - 24em);
-  overflow: hidden;
-  position: relative;
-}
-
-section.anim h1 {
-  position: absolute;
-  font-size: 10em;
-  text-transform: uppercase;
-  margin: 0;
-  z-index: 1;
-  left: 15%;
+@keyframes portfolioLinkAnim {
+	0% {
+		transform: translateX(-800px);
+		opacity: 0;
+	}
+	32% {
+		transform: rotate(-15deg) translateX(0);
+		opacity: 0.33;
+	}
+	66% {
+		transform: rotate(15deg);
+		opacity: 0.66;
+	}
+	85% {
+		transform: translateX(10px);
+		opacity: 0.85;
+	}
+	100% {
+		transform: rotate(0);
+		opacity: 1;
+	}
 }
 
-section.anim p {
-  position: absolute;
-  font-size: 2em;
-  width: 40%;
-  z-index: 1;
-  top: 500px;
+@keyframes indicatorAnim {
+	0% {
+		transform: translateY(-50px);
+		opacity: 0;
+	}
+	50% {
+		transform: translateY(20px);
+		opacity: 0.5;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 
-section.anim .box1 {
-  position: absolute;
-  top: 0;
-  left: 20%;
-  z-index: 0;
-  width: 800px;
-  height: 800px;
-  border: 30px solid #20a2c3;
-  overflow: hidden;
-  transform: rotateZ(65deg);
+@keyframes firstHeroAnim {
+	0% {
+		transform: translateX(-55%);
+		opacity: 0;
+	}
+	70% {
+		transform: translateX(10px);
+		opacity: 0.7;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 0.9;
+	}
 }
 
-section.anim .box2 {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  z-index: 0;
-  width: 200px;
-  height: 200px;
-  border: 30px solid rgba(255, 255, 255, 0.5);
-  overflow: hidden;
-}*/
+@keyframes lastHeroAnim {
+	0% {
+		transform: translateX(-110%);
+		opacity: 0;
+	}
+	70% {
+		transform: translateX(10px);
+		opacity: 0.7;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 0.95;
+	}
+}
+
+@keyframes heroAnim {
+	0% {
+		transform: translateX(-150%);
+		opacity: 0;
+	}
+	70% {
+		transform: translateX(1%);
+		opacity: 0.7;
+	}
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes bounce {
+	50% {
+		transform: translateY(-25%);
+	}
+}
+
+.firstHeroAnim {
+	opacity: 0;
+	animation: firstHeroAnim 0.6s 1 0s ease;
+}
+
+.lastHeroAnim {
+	opacity: 0;
+	animation: lastHeroAnim 0.8s 1 1.2s ease forwards;
+}
+
+.heroAnim {
+	opacity: 0;
+	animation: heroAnim 1s 1 0.6s ease forwards;
+}
+
+.portfolioLinkAnim {
+	opacity: 0;
+	animation: portfolioLinkAnim 0.7s 1 1.4s ease forwards;
+}
+
+.indicatorAnim {
+	opacity: 0;
+	animation: indicatorAnim 1s 1 1.8s ease forwards;
+}
+/* END KEYFRAMES & ANIMATION CLASSES */
