--- a/public/main.scss
+++ b/public/main.scss
@@ -658,11 +658,11 @@ select:-webkit-autofill {
 		opacity: 0;
 	}
 	32% {
-		transform: rotate(-15deg) translateX(0);
+		transform: rotate(-5deg) translateX(0);
 		opacity: 0.33;
 	}
 	66% {
-		transform: rotate(15deg);
+		transform: rotate(5deg);
 		opacity: 0.66;
 	}
 	85% {
@@ -764,4 +764,50 @@ select:-webkit-autofill {
 	opacity: 0;
 	animation: indicatorAnim 1s 1 1.8s ease forwards;
 }
+/*
+@keyframes navbarAnim {
+	0% {
+		transform: translateX(100%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+.navbarAnim {
+	opacity: 0;
+	animation: navbarAnim 0.4s 1 0s ease forwards;
+}*/
+
+@keyframes freelancerAnim {
+	0% {
+		transform: translateX(-200%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
+
+.freelancerAnim {
+	opacity: 0;
+	animation: freelancerAnim 1s 1 0s ease forwards;
+}
+
+/*
+@keyframes bgAnim {
+	0% {
+		transform: scale(0.97) translateX(-2%) translateY(-2%);
+	}
+	100% {
+		transform: scale(1) translateX(0) translateY(0);
+	}
+}
+
+.bgAnim {
+	animation: bgAnim 0.5s 1 0s ease;
+}*/
 /* END KEYFRAMES & ANIMATION CLASSES */
