--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,8 @@
 
 <div id="fullPage">
 	<section class="section main-section hero" id="landing-section" data-anchor="landing">
-		<div class="bg-clipper">
-			<nav class="navbar navbar-dark pt-4">
+		<div class="bg-clipper" data-animation="bgAnim">
+			<nav class="navbar navbar-dark pt-4" data-animation="navbarAnim">
 				<a class="navbar-brand" href="#">ablin@dev</a>
 
 				<ul class="navbar-nav">
@@ -21,7 +21,7 @@
 			<h2 class="hero-secondary-title" data-animation="lastHeroAnim">I will build the website you've been dreaming of</h2>
 
 			<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
-			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" />
+			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" />
 			<div class="scroll-indicator" data-animation="indicatorAnim"></div>
 		</div>
 	</section>
