--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <div id="fullPage">
 	<section class="section main-section hero" id="landing-section" data-anchor="landing">
 		<div class="bg-clipper" data-animation="bgAnim">
-			<nav class="navbar navbar-dark pt-4" data-animation="navbarAnim">
+			<nav class="navbar navbar-dark pt-4">
 				<a class="navbar-brand" href="#">ablin@dev</a>
 
 				<ul class="navbar-nav">
