--- a/public/main.scss
+++ b/public/main.scss
@@ -655,20 +655,12 @@ select:-webkit-autofill {
 		transform: translateX(-800px);
 		opacity: 0;
 	}
-	32% {
-		transform: rotate(-5deg) translateX(0);
-		opacity: 0.33;
-	}
-	66% {
-		transform: rotate(5deg);
-		opacity: 0.66;
-	}
-	85% {
-		transform: translateX(10px);
-		opacity: 0.85;
+	95% {
+		transform: translateX(2px);
+		opacity: 0.95;
 	}
 	100% {
-		transform: rotate(0);
+		transform: rotate(0) translateX(0);
 		opacity: 1;
 	}
 }
@@ -760,24 +752,8 @@ select:-webkit-autofill {
 
 .indicatorAnim {
 	opacity: 0;
-	animation: indicatorAnim 1s 1 1.8s ease forwards;
+	animation: indicatorAnim 0.8s 1 1.8s ease forwards;
 }
-/*
-@keyframes navbarAnim {
-	0% {
-		transform: translateX(100%);
-		opacity: 0;
-	}
-	100% {
-		transform: translateX(0);
-		opacity: 1;
-	}
-}
-
-.navbarAnim {
-	opacity: 0;
-	animation: navbarAnim 0.4s 1 0s ease forwards;
-}*/
 
 @keyframes freelancerAnim {
 	0% {
