--- a/public/main.scss
+++ b/public/main.scss
@@ -136,7 +136,6 @@ body {
 	display: block;
 	padding: 10px 0;
 	border: none !important;
-	//background: color(main);
 	background: linear-gradient(90deg, color(main), color(main-light));
 	color: white;
 	outline: none;
@@ -152,6 +151,7 @@ body {
 
 	-webkit-clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
 	clip-path: polygon(calc(100% - 15px) 0, 100% 15px, 100% 100%, 15px 100%, 0 calc(100% - 15px), 0 0);
+
 	&:before {
 		border-radius: inherit;
 		background-image: linear-gradient(270deg, color(main), color(main-light));
@@ -747,7 +747,7 @@ select:-webkit-autofill {
 
 .portfolioLinkAnim {
 	opacity: 0;
-	animation: portfolioLinkAnim 0.7s 1 1.4s ease forwards;
+	animation: portfolioLinkAnim 0.7s 1 1.4s ease both;
 }
 
 .indicatorAnim {
