--- a/public/main.css
+++ b/public/main.css
@@ -69,8 +69,8 @@ body {
 
 .action-btn {
   display: block;
-  background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
-  background: linear-gradient(90deg, #f34023, #f66a53);
+  background-image: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
+  background-image: linear-gradient(90deg, #f34023, #f66a53);
   width: 100%;
   height: 50px;
   border: none !important;
@@ -103,16 +103,17 @@ body {
   transition: opacity 0.3s ease-in-out;
 }
 
-.action-btn:hover:before {
-  opacity: 1;
-}
-
 .action-btn:hover {
   color: #f1f1f1 !important;
   text-decoration: none;
-  font-weight: bold;
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+}
+
+.action-btn:hover:before {
+  opacity: 1;
 }
 
 .action-link {
@@ -233,7 +234,9 @@ textarea {
   resize: none;
 }
 
-input:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
 textarea:focus,
 input:-webkit-autofill:focus,
 textarea:-webkit-autofill:focus,
@@ -360,14 +363,14 @@ select:-webkit-autofill {
 }
 
 .hero .portfolio-link {
-  margin-left: 25%;
+  margin-left: 26%;
   margin-top: 1em;
 }
 
 .scroll-indicator {
   height: 100px;
   position: absolute;
-  left: 31.5%;
+  left: 32.5%;
   top: 61%;
 }
 
@@ -527,27 +530,30 @@ select:-webkit-autofill {
 }
 
 #contact-section .bg-clipper {
-  height: 100%;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
-          clip-path: polygon(0 0, 100% 0, 100% 85%, 75% 97%, 28% 89%, 0 80%);
+  height: 105%;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
+          clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
   background-color: #f1f1f1;
 }
 
 #contact-section .contact-footer {
-  height: 200px;
   width: 100%;
-  margin-top: 50px;
-  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: #080808;
+  padding: 0 10%;
 }
 
 #contact-section .contact-footer ul {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   list-style: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 #contact-section .contact-footer li {
@@ -555,12 +561,48 @@ select:-webkit-autofill {
   font-size: 26px;
   font-weight: bold;
   margin: 0 15px;
-  width: 315px;
   text-align: right;
+}
+
+#contact-section .contact-footer li span {
+  color: #dedddd;
 }
 
 #contact-section .contact-footer li i {
   color: #f34023;
+}
+
+#contact-section #infoContactBtn {
+  margin-bottom: 200px;
+  position: relative;
+}
+
+#contact-section #infoContactBtn i {
+  font-size: 3rem;
+}
+
+#contact-section #infoContactBtn .tooltiptext {
+  -webkit-clip-path: polygon(calc(100% - 20px) 0, 100% 20px, 100% 100%, 20px 100%, 0 calc(100% - 20px), 0 0);
+  clip-path: polygon(calc(100% - 20px) 0, 100% 20px, 100% 100%, 20px 100%, 0 calc(100% - 20px), 0 0);
+  visibility: hidden;
+  width: 50%;
+  background-color: #1b1b1b;
+  color: #dedddd;
+  text-align: center;
+  position: absolute;
+  z-index: 5;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  opacity: 0;
+  -webkit-transition: opacity 0.5s;
+  transition: opacity 0.5s;
+}
+
+#contact-section #infoContactBtn:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 #portfolio-section {
