--- a/views/index.ejs
+++ b/views/index.ejs
@@ -226,12 +226,24 @@
 				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 			</form>
 
-			<div class="contact-footer mb-5">
+			<div class="contact-footer">
 				<ul>
-					<li><i class="fas fa-phone"></i> +33 6 89 89 81 98</li>
-					<li>ablin.dev@gmail.com <i class="fas fa-envelope"></i></li>
+					<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
+					<li><span>ablin.dev@gmail.com </span><i class="fas fa-envelope"></i></li>
 				</ul>
 			</div>
+
+			<!--
+				<div id="infoContactBtn" class="text-center">
+				<i class="fas fa-envelope"></i>
+				<div class="tooltiptext contact-footer">
+					<ul>
+						<li><i class="fas fa-phone"></i> <span>+33 6 89 89 81 98</span></li>
+						<li><span>ablin.dev@gmail.com </span><i class="fas fa-envelope"></i></li>
+					</ul>
+				</div>
+			</div>
+		-->
 		</div>
 	</section>
 </div>
