--- a/public/main.css
+++ b/public/main.css
@@ -122,7 +122,7 @@ body {
   border: none !important;
   background: -webkit-gradient(linear, left top, right top, from(#f34023), to(#f66a53));
   background: linear-gradient(90deg, #f34023, #f66a53);
-  color: white;
+  color: #f1f1f1 !important;
   outline: none;
   cursor: pointer;
   -webkit-transition: 0.3s ease-in-out;
@@ -154,10 +154,6 @@ body {
   transition: opacity 0.3s ease-in-out;
 }
 
-.action-link:hover:before {
-  opacity: 1;
-}
-
 .action-link:hover {
   color: #f1f1f1 !important;
   text-decoration: none;
@@ -165,6 +161,10 @@ body {
           transform: scale(1.05);
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
+}
+
+.action-link:hover:before {
+  opacity: 1;
 }
 
 .contact-alert-wrapper {
@@ -570,39 +570,6 @@ select:-webkit-autofill {
 
 #contact-section .contact-footer li i {
   color: #f34023;
-}
-
-#contact-section #infoContactBtn {
-  margin-bottom: 200px;
-  position: relative;
-}
-
-#contact-section #infoContactBtn i {
-  font-size: 3rem;
-}
-
-#contact-section #infoContactBtn .tooltiptext {
-  -webkit-clip-path: polygon(calc(100% - 20px) 0, 100% 20px, 100% 100%, 20px 100%, 0 calc(100% - 20px), 0 0);
-  clip-path: polygon(calc(100% - 20px) 0, 100% 20px, 100% 100%, 20px 100%, 0 calc(100% - 20px), 0 0);
-  visibility: hidden;
-  width: 50%;
-  background-color: #1b1b1b;
-  color: #dedddd;
-  text-align: center;
-  position: absolute;
-  z-index: 5;
-  top: 100%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  opacity: 0;
-  -webkit-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-
-#contact-section #infoContactBtn:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
 }
 
 #portfolio-section {
