--- a/public/main.scss
+++ b/public/main.scss
@@ -59,6 +59,8 @@ html[data-theme="dark"] {
 }
 */
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap"); /* main */
+@import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
 
 /* GLOBAL */
 
@@ -270,7 +272,6 @@ select:-webkit-autofill {
 /* NAVBAR */
 .navbar-brand {
 	font-weight: bold;
-	font-family: "Montserrat";
 	font-size: 1.5em;
 	margin-left: 3%;
 	color: color(light-gray) !important;
@@ -365,7 +366,7 @@ select:-webkit-autofill {
 	height: 100px;
 	position: absolute;
 	left: 32.5%;
-	top: 61%;
+	top: 63%;
 }
 
 .scroll-indicator::before {
@@ -395,7 +396,6 @@ select:-webkit-autofill {
 
 .hero-title {
 	font-size: 7.5rem;
-	font-family: "Montserrat";
 	font-weight: bold;
 	color: color(main);
 	margin-left: 10%;
@@ -415,7 +415,7 @@ select:-webkit-autofill {
 	font-size: 3.5rem;
 	width: 50%;
 	margin-left: 13%;
-	margin-top: -20px;
+	margin-top: 2em;
 }
 
 #skills-section {
@@ -654,15 +654,15 @@ select:-webkit-autofill {
 
 @keyframes portfolioLinkAnim {
 	0% {
-		transform: translateX(-800px);
+		transform: scale(0.8);
 		opacity: 0;
 	}
-	95% {
-		transform: translateX(2px);
-		opacity: 0.95;
+	98% {
+		transform: scale(1.01);
+		opacity: 0.98;
 	}
 	100% {
-		transform: rotate(0) translateX(0);
+		transform: scale(1);
 		opacity: 1;
 	}
 }
@@ -713,6 +713,7 @@ select:-webkit-autofill {
 
 @keyframes heroAnim {
 	0% {
+		filter: blur(0.5rem);
 		transform: translateX(-150%);
 		opacity: 0;
 	}
@@ -721,6 +722,7 @@ select:-webkit-autofill {
 		opacity: 0.7;
 	}
 	100% {
+		filter: blur(0);
 		opacity: 1;
 		transform: translateX(0);
 	}
@@ -739,17 +741,17 @@ select:-webkit-autofill {
 
 .lastHeroAnim {
 	opacity: 0;
-	animation: lastHeroAnim 0.8s 1 1.2s ease forwards;
+	animation: lastHeroAnim 0.8s 1 1s ease forwards;
 }
 
 .heroAnim {
 	opacity: 0;
-	animation: heroAnim 1s 1 0.6s ease forwards;
+	animation: heroAnim 1s 1 0.2s ease forwards;
 }
 
 .portfolioLinkAnim {
 	opacity: 0;
-	animation: portfolioLinkAnim 0.7s 1 1.4s ease both;
+	animation: portfolioLinkAnim 0.5s 1 1.6s ease both;
 }
 
 .indicatorAnim {
@@ -759,7 +761,7 @@ select:-webkit-autofill {
 
 @keyframes freelancerAnim {
 	0% {
-		transform: translateX(-200%);
+		transform: translateX(100%);
 		opacity: 0;
 	}
 	100% {
@@ -770,7 +772,7 @@ select:-webkit-autofill {
 
 .freelancerAnim {
 	opacity: 0;
-	animation: freelancerAnim 1s 1 0s ease forwards;
+	animation: freelancerAnim 1s 1 0.2s ease forwards;
 }
 
 /*
