--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 				</ul>
 			</nav>
 
-			<h3 data-animation="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
+			<h3 data-animationC="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
 			<h1 class="hero-title" data-animation="heroAnim">Andréas Blin</h1>
 			<h2 class="hero-secondary-title" data-animation="lastHeroAnim">I will build the website you've been dreaming of</h2>
 
