looking for fonts, fixed issue with bg clipper in contact

--- a/public/main.css
+++ b/public/main.css
@@ -45,6 +45,10 @@ html[data-theme="dark"] {
 /* main */
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Eczar:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100;200;300;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* GLOBAL */
 * {
   margin: 0;
@@ -52,7 +56,7 @@ html[data-theme="dark"] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   text-decoration: none;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-wrap: break-word;
   scroll-behavior: smooth;
 }
@@ -108,8 +112,6 @@ body {
 .action-btn:hover {
   color: #f1f1f1 !important;
   text-decoration: none;
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
   -webkit-clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
   clip-path: polygon(100% 0, 100% 0, 100% 100%, 0 100%, 0 100%, 0 0);
 }
@@ -364,15 +366,15 @@ select:-webkit-autofill {
 }
 
 .hero .portfolio-link {
-  margin-left: 26%;
-  margin-top: 1em;
+  margin-left: 23%;
+  margin-top: 3em;
 }
 
 .scroll-indicator {
   height: 100px;
   position: absolute;
-  left: 32.5%;
-  top: 72%;
+  left: 29.5%;
+  top: 73%;
 }
 
 .scroll-indicator::before {
@@ -404,6 +406,7 @@ select:-webkit-autofill {
 .hero-title {
   font-size: 7.5rem;
   font-weight: bold;
+  font-family: "Roboto Slab", serif;
   color: #f34023;
   margin-left: 10%;
   margin-top: -25px;
@@ -417,12 +420,13 @@ select:-webkit-autofill {
 }
 
 .hero-secondary-title {
-  color: #f34023;
-  opacity: 0.95;
-  font-size: 3.5rem;
+  color: #000000 !important;
+  opacity: 0.6;
+  font-size: 5rem !important;
   width: 50%;
-  margin-left: 13%;
-  margin-top: 5em;
+  margin-left: 7%;
+  margin-top: 1.5rem;
+  line-height: 4rem;
 }
 
 #skills-section {
@@ -533,7 +537,8 @@ select:-webkit-autofill {
   height: 105%;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
           clip-path: polygon(0 0, 100% 0, 100% 87%, 86% 98%, 19% 98%, 0 86%);
-  background-color: #f1f1f1;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(89%, #f1f1f1), color-stop(11%, #080808));
+  background: linear-gradient(to bottom, #f1f1f1 89%, #080808 11%);
 }
 
 #contact-section .contact-footer {
@@ -809,12 +814,12 @@ select:-webkit-autofill {
   70% {
     -webkit-transform: translateX(10px);
             transform: translateX(10px);
-    opacity: 0.7;
+    opacity: 0.45;
   }
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    opacity: 0.95;
+    opacity: 0.6;
   }
 }
 
@@ -827,19 +832,17 @@ select:-webkit-autofill {
   70% {
     -webkit-transform: translateX(10px);
             transform: translateX(10px);
-    opacity: 0.7;
+    opacity: 0.45;
   }
   100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
-    opacity: 0.95;
+    opacity: 0.6;
   }
 }
 
 @-webkit-keyframes heroAnim {
   0% {
-    -webkit-filter: blur(0.5rem);
-            filter: blur(0.5rem);
     -webkit-transform: translateX(-150%);
             transform: translateX(-150%);
     opacity: 0;
@@ -850,8 +853,6 @@ select:-webkit-autofill {
     opacity: 0.7;
   }
   100% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
     opacity: 1;
     -webkit-transform: translateX(0);
             transform: translateX(0);
@@ -860,8 +861,6 @@ select:-webkit-autofill {
 
 @keyframes heroAnim {
   0% {
-    -webkit-filter: blur(0.5rem);
-            filter: blur(0.5rem);
     -webkit-transform: translateX(-150%);
             transform: translateX(-150%);
     opacity: 0;
@@ -872,8 +871,6 @@ select:-webkit-autofill {
     opacity: 0.7;
   }
   100% {
-    -webkit-filter: blur(0);
-            filter: blur(0);
     opacity: 1;
     -webkit-transform: translateX(0);
             transform: translateX(0);
@@ -926,11 +923,15 @@ select:-webkit-autofill {
 
 @-webkit-keyframes freelancerAnim {
   0% {
+    -webkit-filter: blur(0.5rem);
+            filter: blur(0.5rem);
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     opacity: 0;
   }
   100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
     -webkit-transform: translateX(0);
             transform: translateX(0);
     opacity: 1;
@@ -939,11 +940,15 @@ select:-webkit-autofill {
 
 @keyframes freelancerAnim {
   0% {
+    -webkit-filter: blur(0.5rem);
+            filter: blur(0.5rem);
     -webkit-transform: translateX(100%);
             transform: translateX(100%);
     opacity: 0;
   }
   100% {
+    -webkit-filter: blur(0);
+            filter: blur(0);
     -webkit-transform: translateX(0);
             transform: translateX(0);
     opacity: 1;
