--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 
 			<h3 data-animationC="firstHeroAnim">Hi, Im a <i>{</i><b> fullstack web developer </b><i>}</i> and my name is</h3>
 			<h1 class="hero-title" data-animation="heroAnim">Andréas Blin</h1>
-			<h2 class="hero-secondary-title" data-animation="lastHeroAnim">I will build the website you've been dreaming of</h2>
+			<h2 class="hero-secondary-title">❝<i>I will build the website you've been dreaming of</i> ❞</h2>
 
 			<a href="#portfolio" class="action-link portfolio-link" data-animation="portfolioLinkAnim">Portfolio</a>
 			<img src="/svg/undraw_freelancer.svg" class="freelancer-svg" alt="Freelance Illustration" data-animation="freelancerAnim" />
